--- a/jeu/android/app/build.gradle
+++ b/jeu/android/app/build.gradle
@@ -1,10 +1,12 @@
+// Apply necessary plugins
+// The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
 plugins {
     id "com.android.application"
     id "kotlin-android"
-    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
-    id "dev.flutter.flutter-gradle-plugin"
+    id "dev.flutter.flutter-gradle-plugin"  // Ensure this plugin is included
 }
 
+// Load local properties
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file("local.properties")
 if (localPropertiesFile.exists()) {
@@ -23,36 +25,66 @@ if (flutterVersionName == null) {
     flutterVersionName = "1.0"
 }
 
+// Android configuration block
 android {
-    namespace = "com.example.jeu"
-    compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
-
-    compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
-    }
+    namespace "com.example.jeu" // Add this line to specify your app's package namespace
+    compileSdkVersion 34  // Specify compile SDK version
+    ndkVersion "21.4.7075529"
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.jeu"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutterVersionCode.toInteger()
-        versionName = flutterVersionName
+        applicationId "com.example.jeu"
+        minSdkVersion flutter.minSdkVersion  // Set minimum SDK version
+        targetSdkVersion 34  // Set target SDK version
+        versionCode 1  // Version code for your app
+        versionName "1.0"  // Version name for your app
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig signingConfigs.debug  // Replace this with your release signing config if needed
+            minifyEnabled false
+            shrinkResources false
         }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17  // Use Java 17 for source compatibility
+        targetCompatibility JavaVersion.VERSION_17  // Use Java 17 for target compatibility
+    }
+
+    kotlinOptions {
+        jvmTarget = "17"  // Set JVM target to 17 for Kotlin compatibility
     }
 }
 
+// Flutter configuration
 flutter {
-    source = "../.."
+    source = "../.."  // Path to Flutter project
+}
+
+// Dependencies for the app
+//dependencies {
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.0"  // Use Kotlin 1.8.0
+
+//    implementation "androidx.core:core-ktx:1.13.1"  // Use AndroidX Core KTX 1.13.1
+//    implementation "androidx.fragment:fragment:1.3.6"  // Version compatible with minSdkVersion 16 and 19
+
+    // Add other dependencies used in your project
+//}
+
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.0"
+    implementation "androidx.core:core-ktx:1.13.1"
+    //implementation "io.flutter:flutter_embedding_release:latest-version"  // Ensure Flutter embedding is added
+}
+
+
+
+// Configuration for dependency versions
+configurations.all {
+    resolutionStrategy.eachDependency { details ->
+        if (details.requested.group == 'org.jetbrains.kotlin') {
+            details.useVersion "1.8.0"
+        }
+    }
 }
