--- a/jeu/android/gradle.properties
+++ b/jeu/android/gradle.properties
@@ -1,3 +1,5 @@
-org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx4096m
 android.useAndroidX=true
 android.enableJetifier=true
+android.suppressUnsupportedCompileSdk=34
+org.gradle.cache.size=2048m  # Example size, adjust as needed
