--- a/jeu/android/build.gradle
+++ b/jeu/android/build.gradle
@@ -1,3 +1,4 @@
+// Global repositories configuration
 allprojects {
     repositories {
         google()
@@ -5,14 +6,47 @@ allprojects {
     }
 }
 
-rootProject.buildDir = "../build"
-subprojects {
-    project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
-    project.evaluationDependsOn(":app")
-}
-
+// Clean task to delete build directory
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+// Configure Kotlin and Android Gradle Plugin versions globally
+buildscript {
+    ext.kotlin_version = '1.8.0' // Update this to 1.8.0
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        // Use Android Gradle Plugin 8.0.2
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:8.0.2'  // Match Gradle version
+    }
+}
+
+subprojects {
+    project.buildDir = "${rootProject.buildDir}/${project.name}"
+    project.evaluationDependsOn(":app")
+
+    // Ensure Kotlin version is consistent across all subprojects
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'org.jetbrains.kotlin') {
+                details.useVersion "1.8.0"
+            }
+        }
+    }
+}
+
+//Force the correct version of Kotlin Gradle Plugin
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        if (details.requested.group == 'org.jetbrains.kotlin' && details.requested.name == 'kotlin-gradle-plugin') {
+            details.useVersion "1.8.0"  // Force using version 1.8.0
+        }
+    }
+}
+
+
+
